oauth2 flow works

--- a/freerest/src/main/resources/application.properties
+++ b/freerest/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+gooa.baaa=test
+google.oauth.callback.uri=http://localhost:8080/login/oauth2/code/google
+
+#http://localhost:8080/oauth2callback
+
+
+
+spring.security.oauth2.client.registration.google.client-id=471894109466-lamo92va1qcb0mcpq3n67njpf7u3t579.apps.googleusercontent.com
+
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#http://localhost:8080/oauth2callback
+spring.security.oauth2.client.registration.google.client-secret=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
+#{baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.client-name=Web client 2
+#spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+
+
+logging.level.org.springframework.security=TRACE
