--- a/freerest/build.gradle
+++ b/freerest/build.gradle
@@ -22,12 +22,25 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.boot:spring-boot-autoconfigure:3.2.2'
+	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	// https://mvnrepository.com/artifact/com.google.cloud.tools/appengine-maven-plugin
 implementation 'com.google.cloud.tools:appengine-maven-plugin:2.8.0'
+
+
+implementation 'com.google.cloud.tools:appengine-maven-plugin:2.8.0'
+implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
+implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+testImplementation 'org.springframework.security:spring-security-test'
+	
 	
 }
 
