fetch imgs by folder id

--- a/freerest/src/main/resources/application.properties
+++ b/freerest/src/main/resources/application.properties
@@ -14,8 +14,12 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-D6M8C4I_I
 #{baseUrl}/{action}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.client-name=Web client 2
-#spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
-
-
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
 logging.level.org.springframework.security=TRACE
+
+
+#logging.level.org.springframework.web.reactive=TRACE
+#messages-client-authorization-code
+
+logging.level.org.springframework.web.reactive=DEBUG
