--- a/freerest/build.gradle
+++ b/freerest/build.gradle
@@ -40,6 +40,9 @@ implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 testImplementation 'org.springframework.security:spring-security-test'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.9'
+
 	
 	
 }
