--- a/freerest/src/main/resources/application.properties
+++ b/freerest/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 gooa.baaa=test
-google.oauth.callback.uri=http://localhost:8080/login/oauth2/code/google
+#google.oauth.callback.uri=http://localhost:8080/login/oauth2/code/google
+google.oauth.callback.uri=https://alert-hall-412514.de.r.appspot.com/login/oauth2/code/google
 
 #http://localhost:8080/oauth2callback
 
@@ -8,7 +9,8 @@ google.oauth.callback.uri=http://localhost:8080/login/oauth2/code/google
 
 spring.security.oauth2.client.registration.google.client-id=471894109466-lamo92va1qcb0mcpq3n67njpf7u3t579.apps.googleusercontent.com
 
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://alert-hall-412514.de.r.appspot.com/login/oauth2/code/google
 #http://localhost:8080/oauth2callback
 spring.security.oauth2.client.registration.google.client-secret=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
 #{baseUrl}/{action}/oauth2/code/{registrationId}
@@ -23,3 +25,4 @@ logging.level.org.springframework.security=TRACE
 #messages-client-authorization-code
 
 logging.level.org.springframework.web.reactive=DEBUG
+logging.file.name=mylog.log
